# quecital

./: .gitignore  404.html  CODE_OF_CONDUCT.md  good_quecital.toml  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: 01_build.yml  02_test.yml.yml  03_deploy.yml  main.yml  mkdocs-publish.yml
CODE_OF_CONDUCT/: index.html
docs/: index.md  reference.md
explanation/: index.html
how-to-guides/: index.html
reference/: index.html
src/: __init__.py
src/quecital/: __main__.py  add_quiz_question.py  add_recital.py  multiline_input.py  multiline_recital_editor.py  multiline_text_editor.py  old_scratch.py  quecital.py  quiz.py  quiz_management.py  recital.py  rectial.py  scratch.py
tests/: __init__.py  test_ci.py  test_quecital.py
tutorials/: index.html
