[tool.poetry]
name = "quecital"
version = "0.2.0"
description = "Fact quiz and line recital"
authors = ["Robert Portelli <github@robertportelli.com>"]
readme = "README.md"
packages = [{include = "quecital", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
quecital = "quecital.__main__:cli"
